-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1
-
Fix Version/s: 10.1.15
-
Component/s: Tests
-
Labels:None
-
Sprint:10.2.1-5
Note: I earlier added a comment about it to MDEV-9840, but I don't see it fixed in the MDEV-9840 commit, so I'm filing a separate report.
As it has already been discussed before, the test encryption.innodb-log-encrypt-crash takes too long on debug builds; e.g. on p8-trusty-bintar-debug it lasts ~850 seconds, sometimes it gets longer and fails due to the timeout.
There are different ways to fix it, I'm not sure which is better for this particular test, that's why I'm assigning it rather than doing it myself:
- disable the test for debug builds;
- mark the test as "big";
- reduce the test so it takes less time.
- blocks
-
MDEV-7069 Fix buildbot failures in main server trees
-
- Stalled
-