MDEV-9865: Test encryption.innodb-log-encrypt-crash takes too long on debug build

Add big_test and not_debug requirements to avoid timeouts.